--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,14 @@ cortex-m-rt = "0.6.10"
 cortex-m-semihosting = "0.3.3"
 panic-halt = "0.2.0"
 
+bare-metal = "0.2.5"
+nb = "0.1.2"
+
+
+[dependencies.stm32f4xx-hal]
+features = ["stm32f411", "rt"]
+version = "0.7.0"
+
 # Uncomment for the panic example.
 # panic-itm = "0.4.1"
 
