--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,44 +9,34 @@
         {
             "type": "cortex-debug",
             "request": "launch",
-            "name": "Debug (QEMU)",
-            "servertype": "qemu",
-            "cwd": "${workspaceRoot}",
-            "preLaunchTask": "Cargo Build (debug)",
-            "runToMain": true,
-            "executable": "./target/thumbv7m-none-eabi/debug/{{project-name}}",
-            /* Run `cargo build --example hello` and uncomment this line to run semi-hosting example */
-            //"executable": "./target/thumbv7m-none-eabi/debug/examples/hello",
-            "cpu": "cortex-m3",
-            "machine": "lm3s6965evb",
-        },
-        {
-            /* Configuration for the STM32F303 Discovery board */
-            "type": "cortex-debug",
-            "request": "launch",
             "name": "Debug (OpenOCD)",
+            "armToolchainPath": "/home/cgn/prog/projects/STM32/gcc-arm-11.2-2022.02-x86_64-arm-none-eabi/bin",
             "servertype": "openocd",
             "cwd": "${workspaceRoot}",
             "preLaunchTask": "Cargo Build (debug)",
+            "executable": "./target/thumbv7em-none-eabihf/debug/app",
             "runToMain": true,
-            "executable": "./target/thumbv7em-none-eabihf/debug/{{project-name}}",
             /* Run `cargo build --example itm` and uncomment this line to run itm example */
             // "executable": "./target/thumbv7em-none-eabihf/debug/examples/itm",
-            "device": "STM32F303VCT6",
+            "device": "STM32F411RET6",
             "configFiles": [
-                "interface/stlink-v2-1.cfg",
-                "target/stm32f3x.cfg"
+                "/usr/share/openocd/scripts/interface/stlink.cfg",
+                "target/stm32f4x.cfg"
             ],
-            "svdFile": "${workspaceRoot}/.vscode/STM32F303.svd",
+            "svdFile": "${workspaceRoot}/.vscode/STM32F411.svd",
             "swoConfig": {
                 "enabled": true,
-                "cpuFrequency": 8000000,
+                "cpuFrequency": 10000000,
                 "swoFrequency": 2000000,
                 "source": "probe",
                 "decoders": [
-                    { "type": "console", "label": "ITM", "port": 0 }
+                    {
+                        "type": "console",
+                        "label": "ITM",
+                        "port": 0
+                    }
                 ]
             }
-        }
+        },
     ]
 }
