--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,31 +6,17 @@ name = "app"
 version = "0.1.0"
 
 [dependencies]
-cortex-m = "0.6.0"
-cortex-m-rt = "0.6.10"
-cortex-m-semihosting = "0.3.3"
 panic-halt = "0.2.0"
-
-bare-metal = "0.2.5"
-nb = "0.1.2"
-
+nb = "1"
+cortex-m = "0.7"
+cortex-m-rt = "0.7"
+st7735-lcd = "0.8.1"
+embedded-graphics = "0.7"
+heapless = "0.7.16"
 
 [dependencies.stm32f4xx-hal]
 features = ["stm32f411", "rt"]
-version = "0.7.0"
-
-# Uncomment for the panic example.
-# panic-itm = "0.4.1"
-
-# Uncomment for the allocator example.
-# alloc-cortex-m = "0.4.0"
-
-# Uncomment for the device example.
-# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
-# and then use `cargo build --examples device` to build it.
-# [dependencies.stm32f3]
-# features = ["stm32f303", "rt"]
-# version = "0.7.1"
+version = "0.13.2"
 
 # this lets you use `cargo fix`!
 [[bin]]
@@ -42,3 +28,6 @@ bench = false
 codegen-units = 1 # better optimizations
 debug = true # symbols are nice and they don't increase the size on Flash
 lto = true # better optimizations
+
+[profile.dev.package."*"] # +
+opt-level = "z" # +
