--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,9 @@ name = "app"
 version = "0.1.0"
 
 [dependencies]
-panic-halt = "0.2.0"
+panic-semihosting = "0.6.0"
+cortex-m-semihosting = "0.5.0"
+# panic-halt = "0.2.0"
 nb = "1"
 cortex-m = "0.7"
 cortex-m-rt = "0.7"
